[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/retro_gaming/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Background.png" type="Texture" id=2]
[ext_resource path="res://UI/MenuControles.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MenuControles" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 180.0 ],
"_edit_vertical_guides_": [ 320.0 ]
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 2 )

[node name="Controles" type="Label" parent="."]
margin_left = 206.0
margin_top = 11.0
margin_right = 435.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Controles"

[node name="Voltar" type="Button" parent="."]
margin_left = 282.0
margin_top = 327.0
margin_right = 359.0
margin_bottom = 354.0
custom_fonts/font = SubResource( 2 )
text = "Voltar"
flat = true

[connection signal="mouse_entered" from="Voltar" to="." method="_on_Voltar_mouse_entered"]
[connection signal="mouse_exited" from="Voltar" to="." method="_on_Voltar_mouse_exited"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
